# medassist-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DOCKER_SETUP.md  Dockerfile  README.md  alembic.ini  api_integration_test.py  docker-compose.dev.yml  pyproject.toml  setup_repo.sh
.github/workflows/: ci.yml
alembic/: README.md  env.py
alembic/versions/: 05d85be44341_add_visit_id_to_llm_cache_table.py  6920c86509c1_add_patient_id_to_llm_cache_table.py  e5b4f6f9ca59_create_llm_cache_model.py  e86e8e81d4b6_add_cost_and_token_tracking_to_llmcache_.py
src/: main.py
src/api/: routes.py
src/api/endpoints/: auth.py  clinical.py  demo.py  health.py
src/core/: config.py  container.py  database.py
src/models/: clinical_models.py  llm_cache_model.py
src/prompts/: chat.yml  diagnosis.yml  doctor_assistant.yml  emergency_triage.yml  inpatient_admitted_patients.yml  medication.yml  outpatient_history_physical_exam.yml  outpatient_lab_result_interpretation.yml  patient_education.yml  radiology_image_interpretation.yml  triage_cold_cases.yml  visit_summary.yml
src/services/: clinical_assistant_service.py  llm_caching_service.py
src/tests/: test_clinical_assistant_service.py  test_llm_caching_service.py
src/utils/: llm_security.py
