[project]
name = "medassist-ai"
version = "1.0.0"
description = "Clinical decision support platform for healthcare professionals"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "backoff>=2.2.1",
    "openai>=1.100.0",
    "tiktoken>=0.8.0",
    "loguru>=0.7.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.43",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "PyYAML>=6.0.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["."]
